# haskell-function-graph

./: .gitignore  CHANGELOG.md  HTMX breaks incremental rendering.md  LICENSE  README.md  TODO.md  TODO.sh  build-hls.nix  build-hls.sh.nix  cabal.project  cabal.project.freeze  default.nix  function-graph.cabal  hie.yaml  input.dot  run-ci.sh  shell.nix
.github/workflows/: cabal-in-nix-shell.yml  docker.yaml  nix-build.yml
app/: Main.hs
app/server/: Main.hs
benchmark/: BenchmarkServer.hs  BenchmarkWeb.hs  Benchmarks.hs
benchmark/lib/: BenchmarkLib.hs
benchmark/web/: BenchmarkWeb.hs
js/: htmx-ext-chunked-transfer.js
nix/: docker.nix  pkgs.nix
src/: MyLib.hs
src/MyLib/: Examples.hs
src/lib/: FunGraph.hs  MyLib.hs
src/lib/FunGraph/: Build.hs  Examples.hs  GraphViz.hs  Test.hs  Types.hs  Util.hs
src/lib/MyLib/: Examples.hs  Test.hs
src/lib/Streaming/Prelude/: Extras.hs
src/server/: Server.hs
src/server/Data/: BalancedStream.hs  PrioTrie.hs
src/server/Server/: Api.hs  CLI.hs  Config.hs  GraphViz.hs  HtmlStream.hs  Monad.hs
src/server/Server/Pages/: Root.hs  Search.hs  Typeahead.hs
src/test/FunGraph/: Test.hs
src/test/FunGraph/Test/: ExtraArgs.hs  Util.hs
test/: Spec.hs
test/doctest/: Main.hs
test/prop/: Spec.hs
test/prop/Spec/: PrioTrie.hs
test/unit/: Spec.hs
test/web/: Spec.hs
