cabal-version:   3.0
name:            function-graph
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Rune K. Svendsen
maintainer:      runesvend@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:     GHC == 8.10.7, GHC == 9.0.2

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  FunGraph
                      FunGraph.Types
                      FunGraph.Build
                      FunGraph.Examples
                      FunGraph.Test
                      FunGraph.Util
    build-depends:    base
                    , hashable
                    , bellman-ford
                    , dump-decls
                    , aeson
                    , bytestring
                    , text
                    , containers
                    , utf8-string
                    , pretty-show
                    , stringsearch
                    , deepseq
    hs-source-dirs:   src/lib
    default-language: Haskell2010

library function-graph-server
    import:           warnings
    exposed-modules:  Server
                      Server.Api
                      Server.Monad
                      Server.Pages.Root
                      Server.Pages.Search
    build-depends:    base
                    , function-graph
                    , text
                    , lucid
                    , lucid-htmx
                    , servant-lucid
                    , servant
                    , servant-server
                    , wai
                    , warp
                    , mtl
                    , containers
    hs-source-dirs:   src/server
    default-language: Haskell2010

executable server
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app/server
    build-depends:    base, function-graph-server, lucid, file-embed, text
    default-language: Haskell2010
    ghc-options: -threaded
                 -O2
--                 -rtsopts "-with-rtsopts=-N -p -s -hT -i0.1"

executable function-graph
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base, function-graph, bellman-ford, containers, ansi-terminal
    default-language: Haskell2010

executable benchmark
  import: warnings
  main-is: Benchmarks.hs
  hs-source-dirs: benchmark
  build-depends:
      base
    , function-graph
    , criterion
  default-language: Haskell2010
  ghc-options: -threaded
               -O2
--               -rtsopts "-with-rtsopts=-N -p -s -hT -i0.1"

test-suite function-graph-test
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
  build-depends:
      base
    , function-graph
    , bellman-ford
    , bytestring
    , text
    , containers
    , hspec
    , hspec-expectations
    , hspec-expectations-pretty-diff
  default-language: Haskell2010
