cabal-version:   3.0
name:            function-graph
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Rune K. Svendsen
maintainer:      runesvend@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:     GHC == 8.10.7, GHC == 9.0.2

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  FunGraph
                      FunGraph.Types
                      FunGraph.Build
                      FunGraph.Examples
                      FunGraph.Test
                      FunGraph.Util
    build-depends:    base
                    , hashable
                    , bellman-ford
                    , dump-decls-lib
                    , aeson
                    , bytestring
                    , text
                    , containers
                    , utf8-string
                    , pretty-show
                    , stringsearch
                    , deepseq
                    , mtl
                    , time
                    , streaming
                    -- FunGraph.Util
                    , lucid
    hs-source-dirs:   src/lib
    default-language: Haskell2010

library function-graph-server
    import:           warnings
    exposed-modules:  Server
                      Server.Api
                      Server.Monad
                      Server.Pages.Root
                      Server.Pages.Search
                      Server.Pages.Typeahead
                      Server.GraphViz
                      Server.HtmlStream
                      Data.BalancedStream
                      Data.PrioTrie
    build-depends:    base
                    , bellman-ford
                    , function-graph
                    , text
                    , bytestring
                    , lucid
                    , lucid-htmx
                    , servant-lucid
                    , servant
                    , servant-server
                    , wai
                    , warp
                    , mtl
                    , transformers
                    , containers
                    , unordered-containers
                    -- BEGIN: Server.GraphViz
                    , process
                    -- END: Server.GraphViz
                    , servant-errors
                    , wai-extra
                    , deepseq
                    , streaming
    hs-source-dirs:   src/server
    default-language: Haskell2010

executable server
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app/server
    build-depends:    base, function-graph-server, lucid, file-embed, text
    default-language: Haskell2010
    ghc-options: -threaded
                 -O2
--                 -rtsopts "-with-rtsopts=-N -p -s -hT -i0.1"

executable function-graph
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base, function-graph, bellman-ford, containers, ansi-terminal, text
                    , streaming
                    , lucid
                    , lucid-htmx
                    , servant-lucid
                    , servant
                    , servant-server
                    , wai
                    , warp
                    , text
                    , http-media
    default-language: Haskell2010

benchmark benchmark-lib
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Benchmarks.hs
  hs-source-dirs: benchmark
  build-depends:
      base
    , function-graph
    , criterion
  default-language: Haskell2010
  ghc-options: -threaded
               -O2

benchmark benchmark-web
  import: warnings
  type: exitcode-stdio-1.0
  main-is: BenchmarkWeb.hs
  hs-source-dirs: benchmark
  build-depends:
      base
    , function-graph
    , function-graph-server
    , servant
    , servant-client
    , servant-lucid
    , criterion
    , text
    , bytestring
    , lucid
    , warp
    , http-client
    , streaming-commons
    , wai
    , async
    , streaming
  default-language: Haskell2010
  ghc-options: -threaded
               -O2

-- TODO: Add integration test that runs a server like `benchmark-web`
test-suite function-graph-test
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
  build-depends:
      base
    , function-graph
    , bellman-ford
    , bytestring
    , text
    , containers
    , hspec
    , hspec-expectations
    , hspec-expectations-pretty-diff
  default-language: Haskell2010
