cabal-version:   3.0
name:            function-graph
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Rune K. Svendsen
maintainer:      runesvend@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:     GHC == 8.10.7, GHC == 9.0.2

data-files:
    data/all3.json

-- TODO: add -Wunused-packages
common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  FunGraph
                      FunGraph.Types
                      FunGraph.Build
                      FunGraph.Examples
                      FunGraph.Util
                      Streaming.Prelude.Extras
    build-depends:    base
                    , hashable
                    , bellman-ford
                    , dump-decls-lib
                    , aeson
                    , bytestring
                    , text
                    , containers
                    , utf8-string
                    , deepseq
                    , mtl
                    , time
                    , streaming
                    , transformers
                    -- FunGraph.Util
                    , lucid
                    -- TMP debugging
                    , ansi-terminal
    hs-source-dirs:   src/lib
    default-language: Haskell2010

library function-graph-server
    import:           warnings
    exposed-modules:  Server
                      Server.Api
                      Server.Monad
                      Server.Pages.Root
                      Server.Pages.Search
                      Server.Pages.Typeahead
                      Server.GraphViz
                      Server.HtmlStream
                      Data.BalancedStream
                      Data.PrioTrie
    build-depends:    base
                    , bellman-ford
                    , function-graph
                    , text
                    , bytestring
                    , lucid
                    , lucid-htmx
                    , servant-lucid
                    , servant
                    , servant-server
                    , warp
                    , mtl
                    , transformers
                    , containers
                    , unordered-containers
                    -- BEGIN: Server.GraphViz
                    , process
                    -- END: Server.GraphViz
                    , servant-errors
                    , wai-extra
                    , deepseq
                    , streaming
                    , time
                    , file-embed
                    , these
    hs-source-dirs:   src/server
    default-language: Haskell2010

library test
    import:           warnings
    exposed-modules:  FunGraph.Test
                      FunGraph.Test.Util
                      FunGraph.Test.ExtraArgs
    build-depends:    base
                    , function-graph
                    , bytestring
                    , text
                    , containers
                    , deepseq
                    , streaming
                    -- FunGraph.Util
                    , lucid
                    , hspec-expectations-pretty-diff
                    , function-graph-server
                    , servant
                    , servant-client
                    , servant-lucid
                    , text
                    , bytestring
                    , lucid
                    , warp
                    , http-client
                    , streaming-commons
                    , wai
                    , async
                    , streaming
                    , transformers
                    , time
    hs-source-dirs:   src/test
    default-language: Haskell2010

executable server
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app/server
    build-depends:    base, function-graph-server, lucid, file-embed, text
    default-language: Haskell2010
    ghc-options: -threaded
                 -O2
--                 -rtsopts "-with-rtsopts=-N -p -s -hT -i0.1"

executable function-graph
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base, function-graph, bellman-ford, containers, ansi-terminal, text
    default-language: Haskell2010

benchmark benchmark-lib
  import: warnings
  type: exitcode-stdio-1.0
  main-is: BenchmarkLib.hs
  hs-source-dirs: benchmark/lib
  build-depends:
      base
    , function-graph
    , function-graph:test
    , function-graph:function-graph-server
    , criterion
  default-language: Haskell2010
  ghc-options: -threaded
               -O2

benchmark benchmark-web
  import: warnings
  type: exitcode-stdio-1.0
  main-is: BenchmarkWeb.hs
  hs-source-dirs: benchmark/web
  build-depends:
      base
    , function-graph:test
    , function-graph-server
    , criterion
    , text
    , bytestring
    , lucid
    , streaming
  default-language: Haskell2010
  ghc-options: -threaded
               -O2

test-suite test-unit
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test/unit
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
  build-depends:
      base
    , function-graph
    , function-graph:test
    , bellman-ford
    , bytestring
    , text
    , containers
    , hspec
    , hspec-expectations
    , hspec-expectations-pretty-diff
  default-language: Haskell2010

-- WIP: doesn't work with nix-build
executable test-web
  import: warnings
  main-is: Spec.hs
  hs-source-dirs: test/web
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
  build-depends:
      base
    , function-graph
    , function-graph:test
    , dump-decls-lib
    , bytestring
    , text
    , containers
    , hspec
    , hspec-expectations-pretty-diff
    , function-graph-server
    , servant
    , servant-client
    , servant-lucid
    , text
    , bytestring
    , lucid
    , warp
    , http-client
    , streaming-commons
    , wai
    , async
    , streaming
    , html-parse
    , ansi-terminal
    , temporary
  default-language: Haskell2010

test-suite test-prop
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Spec.PrioTrie
      Paths_function_graph
  autogen-modules:
      Paths_function_graph
  hs-source-dirs:
      test/prop
  build-depends:
      base >=4.7 && <5
    , function-graph
    , function-graph:function-graph-server
    , bytestring
    , text
    , QuickCheck
    , tasty
    , tasty-quickcheck
    , aeson
    , deepseq
    , containers
  default-language: Haskell2010
